20240309 Moved .xml files to resources. Updated code fixing some deprecations. Added new java classes to git.